<resources>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_bottom_tab">BottomTabActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_verify_identity">VerifyIdentity</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medical_info">MEDICAL INFO</string>
    <string name="insurance">INSURANCE</string>
    <string name="medications">MEDICATIONS</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="intent_change_password">fromChangePassword</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="password_hint">Password should contain at least one number,one lowercase letter one uppercase letter,and one special character</string>
    <string name="title_activity_finger_print">FingerPrintActivity</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="finger_print_string">Would you like to use fingerprint instead of typing password when you Log In ?</string>
    <string name="tab_upcoming">UPCOMING</string>
    <string name="tab_history">HISTORY</string>
    <string name="error_email">Please enter a valid email id</string>
    <string name="error_email_phone">Email or Phone Number can not be empty</string>
    <string name="error_password">Password can not be empty</string>
    <string name="please_enter_pin">Please Enter Pin</string>
    <string name="empty_dob">Please select your Dob</string>
    <string name="select_email">Email</string>
    <string name="label_status_confirmed">Confirmed</string>
    <string name="label_status_missed">Missed</string>
    <string name="label_status_visited">Visited</string>
    <string name="title_activity_schedule_details">ScheduleDetailsActivity</string>
    <string name="label_schedule">Schedule</string>
    <string name="label_reschedule">Reschedule</string>
    <string name="label_askQuestion">Ask a Question</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_note">Note</string>
    <string name="text_note">Preparation for Blood Test You can have water and your usual medicines.</string>
    <string name="label_attached_files">Attached Files</string>
    <string name="label_location">Location</string>
    <string name="address">558,Clayton St,San Francisco,CA 94117,Usa</string>
    <string name="value_username">Jeffery S. Cripping</string>
    <string name="date_dd_mm_yyyy">31-10-2019</string>
    <string name="value_time">Yesterday 02:12:32 PM</string>
    <string name="intent_is_from_upcoming">IsFromUpcoming</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="label_camera">Take New Photo</string>
    <string name="label_choose_from_gallary">Choose From Gallery</string>
    <string name="label_invitationcode">Enter Invitation Code</string>
    <string name="label_search_doctor_base">Search Doctor Base</string>
    <string name="title_activity_add_doctor_team">AddDoctorTeamActivity</string>
    <string name="title_add_doctor_team">Add Doctor Team</string>
    <string name="add_doctor_name_static">Please enter the code you received from your doctor</string>
    <string name="msg_new_doctor_added">New doctor team added to your list!</string>
    <string name="title_activity_search_by_name">SearchByNameActivity</string>
    <string name="label_add">Add</string>
    <string name="title_activity_doctors_profile">DoctorsProfileActivity</string>
    <string name="title_activity_profile_doctor">Doctor Details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="value_speciality">Dentistry, Hermatology, Cytophatology</string>
    <string name="value_abouts">Sarah graduated from the Virginia commonwealth University SOM in 2012 anthony works in westminister,Co and specializes in family Medicines</string>
    <string name="label_call">Call</string>
    <string name="label_chat">Chat</string>
    <string name="label_practice">PRACTICE</string>
    <string name="label_doctorname">Doctor Name</string>
    <string name="label_doctorTEAM">DOCTOR TEAM</string>
    <string name="label_doctorteam_comel_case">Doctor Team</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="value_message">Ok,we made reschedule</string>
    <string name="value_doctor_name">Ida Fox Team</string>
    <string name="last_message_date">Jun 28</string>
    <string name="title_activity_new_chat">NewChatActivity</string>
    <string name="static_string_start_chat">Select Team To Start a Chat</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="value_practice_name">Guha Dentistry practice</string>
    <string name="value_practice_about">Soho Pediatric Group is dedicated to the care health and development of children and their families</string>
    <string name="value_practice_Location">Practice Locations</string>
    <string name="value_website">www.sohopediatriciangroup.com</string>
    <string name="label_website">Website</string>
    <string name="value_phone_number">9858877747</string>
    <string name="value_hospital">St. luke\'s hospital</string>
    <string name="value_start_new_conversation">Start New Conversation</string>
    <string name="hint_choose_topic">Please choose the topic</string>
    <string name="label_send">Send</string>
    <string name="label_all">All</string>
    <string name="label_visit_note_attachment">Visit Note Attachments</string>
    <string name="label_referral_attachments">Referral Attachments</string>
</resources>