<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/titleBadgeTitle"
        android:layout_marginLeft="@dimen/main_layout_padding"
        android:text="Filter By File Types"
        android:padding="16dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLightGreyBackground"/>

    <RelativeLayout
        android:id="@+id/layout_filter_allDoctors"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diolog_layout_height"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/main_layout_padding"
            android:text="@string/label_all"/>

        <ImageView
            android:id="@+id/iv_all_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_check_white_24dp"
            android:tint="@color/colorPrimary"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_filter_received"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diolog_layout_height"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/main_layout_padding"
            android:text="@string/label_visit_note_attachment"/>

        <ImageView
            android:id="@+id/iv_visitnote_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:src="@drawable/ic_check_white_24dp"
            android:tint="@color/colorPrimary"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_filter_sent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diolog_layout_height"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/main_layout_padding"
            android:text="@string/label_referral_attachments"/>
        <ImageView
            android:id="@+id/iv_referral_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:src="@drawable/ic_check_white_24dp"
            android:tint="@color/colorPrimary"/>

    </RelativeLayout>
</LinearLayout>